# thesis_crawler

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: anrt_access_audit_2026-07-07.md  anrt_cifre_new_project_roadmap_2026-07-08.md  anrt_cifre_source_expansion_plan_2026-07-07.md  anrt_implementation_status_2026-07-07.md  cnrs_discovery_audit_2026-07-06.md  implementation_status_audit_2026-07-06.md  local_automation.md  mitigation_and_development_plan.md  prototype_evaluation_2026-07-06.md
src/cnrs_job_watcher/: __init__.py  classify.py  cli.py  evaluation.py  export.py  fetch.py  llm_classifier.py  parse.py  profiles.py  schemas.py  sources.py  storage.py  text.py
src/cnrs_job_watcher/anrt/: __init__.py  fetch.py  fixtures.py  parse.py
tests/: test_anrt.py  test_parse.py
tests/fixtures/: list_page.html  offer_page.html
tests/fixtures/anrt/detail/: espace-membre-offre-detail-123.html  espace-membre-offre-detail-456.html
tests/fixtures/anrt/list/: entreprise.html  laboratoire.html
tests/fixtures/evaluation/: anrt_offers.json  observed_offers.json  offers.json
